--- a/src/index.html
+++ b/src/index.html
@@ -29,75 +29,12 @@
     </div>
 
     <div>
-        <h1 id="demo"></h1>
+        <h1 id="demo" style="color: green"></h1>
 
-        <circle-progress value="50" max="100"></circle-progress>
+        <div id="focus-area" style="background-size: cover">
+            <circle-progress value="50" max="100"></circle-progress>
+        </div>
 
-        <!--<main class="container flex flex-col lg:flex-row gap-8 lg:gap-10">
-            <article
-                    class="relative w-48 h-48 lg:w-56 lg:h-56 xl:w-60 xl:h-60 inline-grid place-content-center text-center border-8 border-[#191919] rounded-full before:rounded-full after:rounded-full after:absolute before:absolute before:-inset-2 pie no-round"
-                    style="&#45;&#45;p: 20; &#45;&#45;c: rgba(253, 41, 112, 1)"
-            >
-				<span
-                        class="absolute inset-0 w-full h-full before:absolute before:inset-0 before:w-7 before:h-7 before:left-[4.5rem] lg:before:left-24 before:-top-4 before:bg-hours before:rounded-full transition-all duration-500 dot"
-                        id="dot-hour"
-                ></span>
-                <h3
-                        class="font-bold text-base lg:text-lg xl:text-xl flex flex-col gap-1 lg:gap-3"
-                >
-					<span
-                            class="text-4xl md:text-5xl lg:text-6xl xl:text-7xl"
-                            id="hour"
-                    ></span>
-
-                    <span>HOURS</span>
-                </h3>
-            </article>
-            <article
-                    class="relative w-48 h-48 lg:w-56 lg:h-56 xl:w-60 xl:h-60 inline-grid place-content-center text-center border-8 border-[#191919] rounded-full before:rounded-full after:rounded-full after:absolute before:absolute before:-inset-2 pie no-round"
-                    style="&#45;&#45;p: 20; &#45;&#45;c: rgba(252, 230, 0, 1)"
-            >
-				<span
-                        class="absolute inset-0 w-full h-full before:absolute before:inset-0 before:w-7 before:h-7 before:left-[4.5rem] lg:before:left-24 before:-top-4 before:bg-minutes before:rounded-full transition-all duration-500 dot"
-                        id="dot-minute"
-                ></span>
-                <h3
-                        class="font-bold text-base lg:text-lg xl:text-xl flex flex-col gap-1 lg:gap-3"
-                >
-					<span
-                            class="text-4xl md:text-5xl lg:text-6xl xl:text-7xl"
-                            id="minutes"
-                    ></span>
-
-                    <span>MINUTES</span>
-                </h3>
-            </article>
-            <article
-                    class="relative w-48 h-48 lg:w-56 lg:h-56 xl:w-60 xl:h-60 inline-grid place-content-center text-center border-8 border-[#191919] rounded-full before:rounded-full after:rounded-full after:absolute before:absolute before:-inset-2 pie no-round"
-                    style="&#45;&#45;p: 20; &#45;&#45;c: rgba(6, 252, 63, 1)"
-            >
-				<span
-                        class="absolute inset-0 w-full h-full before:absolute before:inset-0 before:w-7 before:h-7 before:left-[4.5rem] lg:before:left-24 before:-top-4 before:bg-seconds before:rounded-full transition-all duration-500 dot"
-                        id="dot-second"
-                ></span>
-                <h3
-                        class="font-bold text-base lg:text-lg xl:text-xl flex flex-col gap-1 lg:gap-3"
-                >
-					<span
-                            class="text-4xl md:text-5xl lg:text-6xl xl:text-7xl"
-                            id="seconds"
-                    ></span>
-
-                    <span>SECONDS</span>
-                </h3>
-            </article>
-            <article
-                    class="text-4xl md:text-5xl lg:text-6xl xl:text-7xl lg:relative absolute right-5"
-                    id="ampm"
-            >
-                PM
-            </article>
-        </main>-->
     </div>
 
 </div>
