node version list come from system

--- a/src/index.html
+++ b/src/index.html
@@ -18,19 +18,18 @@
 
 <div style="display: flex; justify-content: space-between;">
 
-    <div><p class="green">Change node version.</p>
+    <div>
+        <p class="green">Change node version.</p>
 
-        <div id="node_version">
-            <label class="radio-btn">
-                <input type="radio" value="16" name="node_version">NodeJS 16
-            </label>
+        <div style="zoom: .7">
 
-            <br>
+            <div id="node_list">
 
-            <label class="radio-btn">
-                <input type="radio" value="20" name="node_version">NodeJS 20
-            </label>
+            </div>
+
         </div>
+
+
     </div>
 
     <div style="display: flex; flex-direction: column; align-items: center">
