--- a/src/index.html
+++ b/src/index.html
@@ -21,7 +21,7 @@
     <div>
         <p class="green">Change node version.</p>
 
-        <div style="zoom: .7">
+        <div style="zoom: .8">
 
             <div id="node_list">
 
@@ -38,7 +38,16 @@
             <circle-progress value="100" max="100" text-format="none" ></circle-progress>
         </div>
 
-        <div style="zoom: .4">
+        <div style="zoom: .4; display: flex">
+
+            <div class="fun-btn" id="minimize-btn">
+                <div style="width: 4rem;">
+                    <svg viewBox="202.637 140.287 70.144 68.347">
+                        <rect x="218.226" y="170.866" width="39.568" height="15.392" style="fill: rgb(216, 216, 216); stroke: rgb(0, 0, 0);" rx="5.696" ry="5.696"></rect>
+                    </svg>
+                </div>
+            </div>
+
             <div class="botón" id="play">
                 <div class="fondo" x="0" y="0" width="200" height="200"></div>
                 <div class="icono" width="200" height="200">
@@ -47,6 +56,16 @@
                 </div>
                 <div class="puntero"></div>
             </div>
+
+            <div class="fun-btn">
+                <div style="width: 3rem;" id="maximize-btn">
+                    <svg viewBox="156.475 163.07 129.496 126.498">
+                        <rect x="181.354" y="168.465" width="100" height="100" stroke-width="5%" style="fill: rgb(255,255,255); stroke: green;" rx="25.18" ry="25.18" transform="matrix(0.9999989867210389, -0.0013380000600591302, 0, 1.0000009536743164, 1.4210854715202004e-14, 0.30955001711845753)"></rect>
+                        <rect x="163.369" y="185.551" width="100" height="100" stroke-width="5%" style="fill: rgb(255,255,255); stroke: green;" rx="10.192" ry="10.192" transform="matrix(1, 0, 0, 1, 1.4210854715202004e-14, 3.552713678800501e-15)"></rect>
+                    </svg>
+                </div>
+            </div>
+
         </div>
     </div>
 
