--- a/src/index.html
+++ b/src/index.html
@@ -57,8 +57,8 @@
                 <div class="puntero"></div>
             </div>
 
-            <div class="fun-btn">
-                <div style="width: 3rem;" id="maximize-btn">
+            <div class="fun-btn" id="maximize-btn">
+                <div style="width: 3rem;">
                     <svg viewBox="156.475 163.07 129.496 126.498">
                         <rect x="181.354" y="168.465" width="100" height="100" stroke-width="5%" style="fill: rgb(255,255,255); stroke: green;" rx="25.18" ry="25.18" transform="matrix(0.9999989867210389, -0.0013380000600591302, 0, 1.0000009536743164, 1.4210854715202004e-14, 0.30955001711845753)"></rect>
                         <rect x="163.369" y="185.551" width="100" height="100" stroke-width="5%" style="fill: rgb(255,255,255); stroke: green;" rx="10.192" ry="10.192" transform="matrix(1, 0, 0, 1, 1.4210854715202004e-14, 3.552713678800501e-15)"></rect>
