--- a/src/index.html
+++ b/src/index.html
@@ -35,6 +35,10 @@
     <div style="display: flex; flex-direction: column; align-items: center">
 
         <div>
+            <div style="width: 100%; display: flex; color: green; margin-bottom: 3px">
+                <div class="time-modify-btn" style="border-radius: 30px 0 0 30px;"> &nbsp; </div>
+                <div class="time-modify-btn" style="border-radius: 0 30px 30px 0;"> &nbsp;</div>
+            </div>
             <div style="zoom: .3; display: flex; justify-content: space-between">
                 <div class="fun-btn" style="background: #358535" id="time-decrease">
                     <div style="width: 4rem; font-size: 3rem; font-weight: bolder">
