--- a/src/index.html
+++ b/src/index.html
@@ -9,103 +9,131 @@
     <script src="js/app.js" defer></script>
 </head>
 <body>
+<!--***********************-->
 
-<div style="display: flex; justify-content: space-between">
-    <h1 class="green">💖 My Work Station!</h1>
-    <h1 style="color: green"> ⏱️ <span id="demo">30m 00s</span></h1>
-</div>
+<div data-micromodal-trigger="modal-1" style="position: absolute; left: 0; font-size: 2rem; cursor: pointer">⛯</div>
 
-
-<div style="display: flex; justify-content: space-between;">
-
-    <div>
-        <p class="green">Change node version.</p>
-
-        <div style="zoom: .8">
-
-            <div id="node_list">
-
-            </div>
-
+<div class="modal micromodal-slide" id="modal-1" aria-hidden="true">
+    <div class="modal__overlay" tabindex="-1" data-micromodal-close style="z-index: 1;">
+        <div class="modal__container" role="dialog" aria-modal="true" aria-labelledby="modal-1-title" style="z-index: 1; background: green">
+            <header class="modal__header">
+                <h2 class="modal__title" id="modal-1-title">
+                    Micromodal
+                </h2>
+                <button class="modal__close" aria-label="Close modal" data-micromodal-close></button>
+            </header>
+            <main class="modal__content" id="modal-1-content">
+                <p>
+                    Try hitting the <code>tab</code> key and notice how the focus stays within the modal itself. Also, <code>esc</code> to close modal.
+                </p>
+            </main>
+            <footer class="modal__footer">
+                <button class="modal__btn modal__btn-primary">Continue</button>
+                <button class="modal__btn" data-micromodal-close aria-label="Close this dialog window">Close</button>
+            </footer>
         </div>
+    </div>
+</div>
+<!--***********************-->
 
-
+<div id="main-ui">
+    <div style="display: flex; justify-content: space-between">
+        <h1 class="green">💖 My Work Station!</h1>
+        <h1 style="color: green"> ⏱️ <span id="demo">30m 00s</span></h1>
     </div>
 
-    <div style="display: flex; flex-direction: column; align-items: center">
+
+    <div style="display: flex; justify-content: space-between;">
 
         <div>
-            <div style="width: 100%; display: flex; color: green; margin-bottom: 1rem">
-                <div class="time-modify-btn" id="time-decrease" style="border-radius: 30px 0 0 30px;"> -5 </div>
-                <div class="time-modify-btn" id="time-increase" style="border-radius: 0 30px 30px 0;"> +5 </div>
-            </div>
-            <!--<div style="zoom: .3; display: flex; justify-content: space-between">
-                <div class="fun-btn" style="background: #358535">
-                    <div style="width: 4rem; font-size: 3rem; font-weight: bolder">
-                        -5
-                    </div>
-                </div>
-                <div class="fun-btn" style="background: green">
-                    <div style="width: 4rem; font-size: 3rem; font-weight: bolder">
-                        +5
-                    </div>
-                </div>
-            </div>-->
+            <p class="green">Change node version.</p>
 
-            <div id="focus-area" style="background-size: cover">
-                <circle-progress value="100" max="100" text-format="none" ></circle-progress>
+            <div style="zoom: .8">
+
+                <div id="node_list">
+
+                </div>
+
+            </div>
+
+
+        </div>
+
+        <div style="display: flex; flex-direction: column; align-items: center">
+
+            <div>
+                <div style="width: 100%; display: flex; color: green; margin-bottom: 1rem">
+                    <div class="time-modify-btn" id="time-decrease" style="border-radius: 30px 0 0 30px;"> -5 </div>
+                    <div class="time-modify-btn" id="time-increase" style="border-radius: 0 30px 30px 0;"> +5 </div>
+                </div>
+                <!--<div style="zoom: .3; display: flex; justify-content: space-between">
+                    <div class="fun-btn" style="background: #358535">
+                        <div style="width: 4rem; font-size: 3rem; font-weight: bolder">
+                            -5
+                        </div>
+                    </div>
+                    <div class="fun-btn" style="background: green">
+                        <div style="width: 4rem; font-size: 3rem; font-weight: bolder">
+                            +5
+                        </div>
+                    </div>
+                </div>-->
+
+                <div id="focus-area" style="background-size: cover">
+                    <circle-progress value="100" max="100" text-format="none" ></circle-progress>
+                </div>
+            </div>
+
+
+            <div style="zoom: .4; display: flex">
+
+                <div class="fun-btn" id="minimize-btn">
+                    <div style="width: 4rem;">
+                        <svg viewBox="202.637 140.287 70.144 68.347">
+                            <rect x="218.226" y="170.866" width="39.568" height="15.392" style="fill: rgb(216, 216, 216); stroke: rgb(0, 0, 0);" rx="5.696" ry="5.696"></rect>
+                        </svg>
+                    </div>
+                </div>
+
+                <div class="botón" id="play">
+                    <div class="fondo" x="0" y="0" width="200" height="200"></div>
+                    <div class="icono" width="200" height="200">
+                        <div class="parte izquierda" x="0" y="0" width="200" height="200" fill="#fff"></div>
+                        <div class="parte derecha" x="0" y="0" width="200" height="200" fill="#fff"></div>
+                    </div>
+                    <div class="puntero"></div>
+                </div>
+
+                <div class="fun-btn" id="maximize-btn">
+                    <div style="width: 3rem;">
+                        <svg viewBox="156.475 163.07 129.496 126.498">
+                            <rect x="181.354" y="168.465" width="100" height="100" stroke-width="5%" style="fill: rgb(255,255,255); stroke: green;" rx="25.18" ry="25.18" transform="matrix(0.9999989867210389, -0.0013380000600591302, 0, 1.0000009536743164, 1.4210854715202004e-14, 0.30955001711845753)"></rect>
+                            <rect x="163.369" y="185.551" width="100" height="100" stroke-width="5%" style="fill: rgb(255,255,255); stroke: green;" rx="10.192" ry="10.192" transform="matrix(1, 0, 0, 1, 1.4210854715202004e-14, 3.552713678800501e-15)"></rect>
+                        </svg>
+                    </div>
+                </div>
+
             </div>
         </div>
 
-
-        <div style="zoom: .4; display: flex">
-
-            <div class="fun-btn" id="minimize-btn">
-                <div style="width: 4rem;">
-                    <svg viewBox="202.637 140.287 70.144 68.347">
-                        <rect x="218.226" y="170.866" width="39.568" height="15.392" style="fill: rgb(216, 216, 216); stroke: rgb(0, 0, 0);" rx="5.696" ry="5.696"></rect>
-                    </svg>
-                </div>
-            </div>
-
-            <div class="botón" id="play">
-                <div class="fondo" x="0" y="0" width="200" height="200"></div>
-                <div class="icono" width="200" height="200">
-                    <div class="parte izquierda" x="0" y="0" width="200" height="200" fill="#fff"></div>
-                    <div class="parte derecha" x="0" y="0" width="200" height="200" fill="#fff"></div>
-                </div>
-                <div class="puntero"></div>
-            </div>
-
-            <div class="fun-btn" id="maximize-btn">
-                <div style="width: 3rem;">
-                    <svg viewBox="156.475 163.07 129.496 126.498">
-                        <rect x="181.354" y="168.465" width="100" height="100" stroke-width="5%" style="fill: rgb(255,255,255); stroke: green;" rx="25.18" ry="25.18" transform="matrix(0.9999989867210389, -0.0013380000600591302, 0, 1.0000009536743164, 1.4210854715202004e-14, 0.30955001711845753)"></rect>
-                        <rect x="163.369" y="185.551" width="100" height="100" stroke-width="5%" style="fill: rgb(255,255,255); stroke: green;" rx="10.192" ry="10.192" transform="matrix(1, 0, 0, 1, 1.4210854715202004e-14, 3.552713678800501e-15)"></rect>
-                    </svg>
-                </div>
-            </div>
-
-        </div>
     </div>
 
-</div>
 
+    <div style="position: absolute; bottom: 3%; width: 100%">
+        <div style="display: flex; justify-content: space-between;" id="btn-area">
 
-<div style="position: absolute; bottom: 3%; width: 100%">
-    <div style="display: flex; justify-content: space-between;" id="btn-area">
-
-        <div style="
+            <div style="
         width: 4rem;
         cursor: pointer;
         color: #008cff;
         font-weight: bolder;
         display: none;
       " id="app-btn">
-            <img style="height: 50px" src="./assets/imgs/laragon.png" alt="Run laragon app">
-            <p style="text-transform: capitalize">Laragon</p>
-        </div>
+                <img style="height: 50px" src="./assets/imgs/laragon.png" alt="Run laragon app">
+                <p style="text-transform: capitalize">Laragon</p>
+            </div>
 
+        </div>
     </div>
 </div>
 
