various preferences functional

--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="UTF-8"/>
-    <title>Hello World!</title>
+    <title>Move Minder</title>
 
     <link rel="stylesheet" href="css/index.css"/>
 
