--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,9 @@
     <script src="js/app.js" defer></script>
 </head>
 <body>
+<div style="color: #206f01;width: 90%;background: #d3f0d3;padding: 5px;border-radius: 3px;margin: 10px auto;text-align: center;">
+    Next holiday: <span id="holiday-text">22-05, May, Wed, "Buddha Purnima"</span>
+</div>
 <div id="toggle-file-shortcut" style="width: 50px; height: 50px; background: radial-gradient(white, green 50%); position: absolute; bottom: 35px;border: 3px solid green; cursor: pointer; border-radius: 50%">
     <svg width="35px" height="35px" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg" style="position: absolute;
     top: 6px;
@@ -116,6 +119,8 @@
                         text-align: center;
                         color: #abd0c0;
                         cursor: pointer;
+                        bottom: 1rem;
+                        position: relative;
                 "
                  id="drop-area"
             >
@@ -133,7 +138,7 @@
             </div>
         </label>
 
-        <div style="display: flex; justify-content: space-between;" id="btn-area">
+        <div style="display: flex; justify-content: space-evenly;" id="btn-area">
 
 
 
@@ -142,7 +147,11 @@
         cursor: pointer;
         color: #008cff;
         font-weight: bolder;
-        display: none;
+        display: flex;
+        align-items: center;
+        flex-direction: column;
+        font-size: 12px;
+        text-wrap: nowrap;
       " id="app-btn">
                 <img style="height: 50px" src="./assets/imgs/laragon.png" alt="Run laragon app">
                 <p style="text-transform: capitalize">Laragon</p>
@@ -164,6 +173,7 @@
     const dropArea = document.querySelector("#drop-area");
     const btnArea = document.querySelector("#btn-area");
     const appBtn = document.querySelector("#app-btn");
+    const holidayText = document.querySelector("#holiday-text");
 
     toggleFileShortcut.addEventListener("click", ()=>{
         //console.log(dropArea.style.display)
@@ -178,7 +188,6 @@
         }
     })
 
-    //dropArea.setAttribute('draggable', true);
 
     dropArea.addEventListener('dragover', function (e) {
         e.preventDefault();
@@ -196,6 +205,9 @@
     const iconList = (app_names) => {
 
         btnArea.innerHTML = '';
+
+        btnArea.style.display = 'flex';
+
 
         /*document.getElementById("icons").innerHTML = (()=>{
             let div = "";
@@ -225,12 +237,21 @@
             //console.log(a, btnArea);
             const cloneAppBtn = appBtn.cloneNode(true);
 
-            cloneAppBtn.style.display = 'block'
+            cloneAppBtn.style.display = 'flex'
 
             cloneAppBtn.querySelector('img').src = `assets/imgs/icons/${filename}.png`
             //cloneAppBtn.querySelector('p').innerText = filename.substring(0, 10)
-            let filenameFWord = filename.split(" ")[0];
-            cloneAppBtn.querySelector('p').innerText = filenameFWord.length > 10 ? filenameFWord.substring(0, 10) : filenameFWord;
+            let filenameSplit = filename.split('.');
+            let fileExt = filenameSplit.pop();
+
+            let filenameSplitFix = filenameSplit.join(".");
+
+            //console.log({filenameSplit})
+
+            let filenameFWord = filenameSplitFix.length > 10 ? filenameSplitFix.substring(0, 7)+'...' +fileExt : filenameSplitFix+ '.' +fileExt;
+            filenameFWord = filenameFWord.split(" ")[0];
+            filenameFWord = filenameFWord.replace(/[-_]/g, " ")
+            cloneAppBtn.querySelector('p').innerText = filenameFWord;
             cloneAppBtn.id = `file-${index}`
 
             //console.log(cloneAppBtn.outerHTML)
@@ -251,43 +272,23 @@
 
     window.iconList = iconList;
 
-    const appArray = [
-        {
-            name: 'laragon',
-            logo: 'laragon.png',
-            color: '#008cff',
-        },
-        {
-            name: 'sourcetree',
-            logo: 'sourcetree.png',
-            color: '#003cff',
-        },
-        {
-            name: 'phpstorm',
-            logo: 'phpstorm.png',
-            color: '#e600ff',
-        },
-        {
-            name: 'clock',
-            logo: 'clock.png',
-            color: '#656565',
-        },
-        {
-            name: 'note',
-            logo: 'note.png',
-            color: '#e1b800',
-        },
-        {
-            name: 'AULA',
-            logo: 'aula.jpeg',
-            color: '#00f7ff',
-        }
-    ];
+    let date_string = window.electron.preferences.holiday.date_string
 
+    let dates = date_string.split("|");
 
+    let currMonthFilter = dates.filter(elm=>{
+        let elmSplit = elm.split(",");
 
-    //console.log({appBtn})
+        let cal_date = elmSplit[0].split("-");
 
+        const d = new Date();
+        let currMonth = String(d.getMonth() + 1);
+        let currDate = String(d.getDate());
+
+        return Number(cal_date[1] + cal_date[0]) > Number(currMonth + currDate);
+    });
+
+    holidayText.innerHTML = currMonthFilter[0];
 
 
 </script>
