--- a/src/index.html
+++ b/src/index.html
@@ -28,7 +28,7 @@
 
 <div id="main-ui">
     <div style="display: flex; justify-content: space-between">
-        <h1 class="green">💖 My Work Station!</h1>
+        <h1 class="green" id="app-title">💖 My Work Station!</h1>
         <h1 style="color: green"> ⏱️ <span id="demo">30m 00s</span></h1>
     </div>
 
@@ -174,6 +174,22 @@
     const btnArea = document.querySelector("#btn-area");
     const appBtn = document.querySelector("#app-btn");
     const holidayText = document.querySelector("#holiday-text");
+    const appTitle = document.querySelector("#app-title");
+
+    const appInitOrUpdate = (updatedPreferences = null) => {
+        let preferences = window.electron.preferences;
+        if (updatedPreferences !== null) {
+            preferences = updatedPreferences;
+        }
+        iconList(preferences.quick_icon.app_name);
+        appTitle.innerHTML = preferences.general.title;
+    }
+
+    document.addEventListener("prefUpdated", (e) => {
+        appInitOrUpdate(e.detail.preferences);
+    });
+
+
 
     toggleFileShortcut.addEventListener("click", ()=>{
         //console.log(dropArea.style.display)
@@ -239,9 +255,6 @@
 
     }
 
-    iconList(window.electron.preferences.quick_icon.app_name);
-
-    //window.iconList = iconList;
 
     const showHoliday = () => {
         let date_string = window.electron.preferences.holiday.date_string
@@ -278,14 +291,9 @@
         }
     }
 
+    appInitOrUpdate();
+
     showHoliday();
-
-
-    // add an appropriate event listener
-    document.addEventListener("prefUpdated", (e) => {
-        iconList(e.detail.preferences.quick_icon.app_name);
-    });
-
 
 
 </script>
